# swagger.yaml
@@ -15,6 +15,38 @@ paths:
           $ref: '#/responses/productsResponse'
       tags:
       - products
+    post:
+      description: Create a new product
+      operationId: createProduct
+      responses:
+        "200":
+          $ref: '#/responses/productResponse'
+        "422":
+          $ref: '#/responses/errorValidation'
+        "501":
+          $ref: '#/responses/errorResponse'
+      tags:
+      - products
+    put:
+      description: Update a products details
+      operationId: updateProduct
+      parameters:
+      - description: The id of the product for which the operation relates
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+        x-go-name: ID
+      responses:
+        "201":
+          $ref: '#/responses/noContentResponse'
+        "404":
+          $ref: '#/responses/errorResponse'
+        "422":
+          $ref: '#/responses/errorValidation'
+      tags:
+      - products
   /products/{id}:
     delete:
       description: Update a products details
@@ -39,7 +71,35 @@ paths:
       tags:
       - products
 produces:
-- application/lsjson
+- application/json
+responses:
+  errorResponse:
+    description: Generic error message returned as a string
+    schema:
+      properties:
+        message:
+          type: string
+          x-go-name: Message
+      type: object
+  errorValidation:
+    description: Validation errors defined as an array of strings
+    schema:
+      properties:
+        messages:
+          description: The validation message
+          items:
+            type: string
+          type: array
+          x-go-name: Messages
+      required:
+      - messages
+      type: object
+  noContentResponse:
+    description: No content is returned by this API endpoint
+  productResponse:
+    description: Data structure representing a single product
+  productsResponse:
+    description: A list of products
 schemes:
 - http
 swagger: "2.0"
